got working windows build and got sockets working

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,11 @@ add_executable(IslandEngine main.cpp Socket.cpp)
 
 find_package(Vulkan REQUIRED)
 
-target_link_libraries(IslandEngine glfw ${Vulkan_LIBRARIES} glm EnTT)
+set(libs glfw ${Vulkan_LIBRARIES} glm EnTT)
+
+if(WIN32)
+    set(libs ${libs} wsock32)
+endif()
+
+target_link_libraries(IslandEngine ${libs})
 target_include_directories(IslandEngine PRIVATE ${Vulkan_INCLUDE_DIR})
