rending a red triangle

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -3,4 +3,5 @@ option(BUILD_TESTING "" OFF)
 add_subdirectory(entt)
 add_subdirectory(glm)
 #may need to configure this more for vulkan
+option(GLFW_BUILD_TESTS "" ON) 
 add_subdirectory(glfw)
