--- a/src/platform/vulkan/Renderer.cpp.in
+++ b/src/platform/vulkan/Renderer.cpp.in
@@ -86,11 +86,12 @@ void Renderer::draw()
     uint32_t imageIndex;
     VkResult result = vkAcquireNextImageKHR(m_device, m_swapChain, UINT64_MAX, m_imageAvailableSemaphores[m_currentFrame], VK_NULL_HANDLE, &imageIndex);
 
-    if(result == VK_ERROR_OUT_OF_DATE_KHR){
+    if(result == VK_ERROR_OUT_OF_DATE_KHR || m_framebufferResized){
         std::cout << "recreating swap chain" << std::endl;
         recreateSwapChain();
+        m_framebufferResized = false;
         return;
-    } else if(result != VK_SUBOPTIMAL_KHR && result != VK_SUCCESS){
+    } else if(result != VK_SUBOPTIMAL_KHR && result != VK_SUCCESS ){
         throw std::runtime_error("failed to acquire swapchain image!");
     }
 
@@ -643,35 +644,45 @@ void Renderer::createCommandPool()
     }
 }
 
-void Renderer::createVertexBuffer()
+void Renderer::createBuffer(VkDeviceSize size, VkBufferUsageFlags usage, VkMemoryPropertyFlags properties, VkBuffer& buffer, VkDeviceMemory& memory)
 {
     VkBufferCreateInfo bufferInfo{};
     bufferInfo.sType = VK_STRUCTURE_TYPE_BUFFER_CREATE_INFO;
-    bufferInfo.size = sizeof(m_vertices[0]) * m_vertices.size();
-    bufferInfo.usage = VK_BUFFER_USAGE_VERTEX_BUFFER_BIT;
+    bufferInfo.size = size;
+    bufferInfo.usage = usage;
     bufferInfo.sharingMode = VK_SHARING_MODE_EXCLUSIVE;
 
-    if (vkCreateBuffer(m_device, &bufferInfo, nullptr, &m_vertexBuffer) != VK_SUCCESS) {
+    if (vkCreateBuffer(m_device, &bufferInfo, nullptr, &buffer) != VK_SUCCESS) {
         throw std::runtime_error("failed to create vertex buffer!");
     }
 
     VkMemoryRequirements memRequirements;
-    vkGetBufferMemoryRequirements(m_device, m_vertexBuffer, &memRequirements);
+    vkGetBufferMemoryRequirements(m_device, buffer, &memRequirements);
 
     VkMemoryAllocateInfo allocInfo{};
     allocInfo.sType = VK_STRUCTURE_TYPE_MEMORY_ALLOCATE_INFO;
     allocInfo.allocationSize = memRequirements.size;
-    allocInfo.memoryTypeIndex = findMemoryType(memRequirements.memoryTypeBits, VK_MEMORY_PROPERTY_HOST_VISIBLE_BIT | VK_MEMORY_PROPERTY_HOST_COHERENT_BIT); 
+    allocInfo.memoryTypeIndex = findMemoryType(memRequirements.memoryTypeBits, properties); 
 
-    if (vkAllocateMemory(m_device, &allocInfo, nullptr, &m_vertexBufferMemory) != VK_SUCCESS) {
+    if (vkAllocateMemory(m_device, &allocInfo, nullptr, &memory) != VK_SUCCESS) {
         throw std::runtime_error("failed to allocate vertex buffer memory!");
     }
 
-    vkBindBufferMemory(m_device, m_vertexBuffer, m_vertexBufferMemory, 0);
+    vkBindBufferMemory(m_device, buffer, memory, 0);
+}
+
+void Renderer::createVertexBuffer()
+{
+    VkDeviceSize bufferSize = sizeof(m_vertices[0]) * m_vertices.size();
+    createBuffer(bufferSize, 
+        VK_BUFFER_USAGE_VERTEX_BUFFER_BIT,
+        VK_MEMORY_PROPERTY_HOST_VISIBLE_BIT | VK_MEMORY_PROPERTY_HOST_COHERENT_BIT,
+        m_vertexBuffer, m_vertexBufferMemory
+    );
 
     void* data;
-    vkMapMemory(m_device, m_vertexBufferMemory, 0, bufferInfo.size, 0, &data);
-    memcpy(data, m_vertices.data(), (size_t) bufferInfo.size);
+    vkMapMemory(m_device, m_vertexBufferMemory, 0, bufferSize, 0, &data);
+    memcpy(data, m_vertices.data(), (size_t) bufferSize);
     vkUnmapMemory(m_device, m_vertexBufferMemory);
 }
 
